# hermit-examples

./: README.md
Bird-book/: README.md  Reasoning.txt  contents.md
Bird-book/century/: Century.hec  Century.hs  Century.hss  CenturyPlugin.hs  ExpandSpec.hss  FusionPrecondition.hss  Instructions.txt  Lemma_6_5a.hss  Lemma_6_5b.hss  Lemma_6_6.hss  Lemma_6_6_left.hss  Lemma_6_6_right.hss  Lemma_6_7_left.hss  Lemma_6_7_right.hss  Lemma_6_8.hss  Lemma_6_8_left.hss  Lemma_6_8_right.hss  Lemma_6_8ind_left_consCase.hss  Lemma_6_8ind_left_nilCase.hss  Lemma_6_8ind_right_consCase.hss  Lemma_6_8ind_right_nilCase.hss  Lemma_6_9.hss  Lemma_mapfusion.hss  Lemma_mapfusion_IND_consCase_left.hss  Lemma_mapfusion_IND_consCase_right.hss  Lemma_mapfusion_IND_nilCase_left.hss  Lemma_mapfusion_IND_nilCase_right.hss  Lemma_mapid.hss  Lemma_mapid_IND_consCase.hss  Lemma_mapid_IND_nilCase.hss  Proofs.hs  ProvingRulesDemo.hss  README  Verify_mapfusion.hss  Verify_mapfusion_IND.hss  expand-simplify.her  lemma-6-10-cons-left.her  lemma-6-10-cons-right.her  lemma-6-10-eta-cons-left.her  lemma-6-10-eta-cons-right.her  (+28 more)
Bird-book/century/FoldExample/: FoldExample.hec  FoldExample.hs
Bird-book/century/FoldrFusionExample/: FoldrFusionExample.hec  FoldrFusionExample.hs
Bird-book/century/century-plugin/: LICENSE  century-plugin.cabal
Bird-book/century/century-plugin/HERMIT/Dictionary/: CenturyPlugin.hs
Bird-book/minfree/: MinFree.hs
Euler/: README.md
Hutton/: README.md
ldpc/: README.md
monad-trans/: README.md
runST/: README.md
