Name:               century-plugin
Version:            0.1
Synopsis:           Additional HERMIT commands for the Century case study.
Category:
Description:        Additional HERMIT commands for the Century case study, based on Richard Bird's Pearls of Functional Algorithm Design.
Author:             Neil Sculthorpe
Maintainer:         Neil Sculthorpe <neil@ittc.ku.edu>
Copyright:          (c) 2014 by Neil Sculthorpe
License:            BSD3
License-file:       LICENSE
Stability:          experimental
build-type:         Simple
Cabal-Version:      >= 1.10

Library
  Build-Depends:
     base >= 4 && < 5,
     ghc >= 7.6,
     hermit >= 0.4.0.0,
     transformers
  default-language: Haskell2010
  Ghc-Options:      -Wall
  Exposed-Modules:  HERMIT.Dictionary.CenturyPlugin

source-repository head
  type:             git
  location:         git://github.com/ku-fpg/hermit-examples
